[package]
name = "tsp-coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
