[package]
name = "tsp-coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
plotters = "0.3.5"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
