[package]
name = "tsp-coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
indicatif = "0.17"
plotters = "0.3.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
